--- a/references.bib
+++ b/references.bib
@@ -1392,6 +1392,14 @@
   year		= {1995}
 }
 
+@Manual{shiny2024,
+    title = {shiny: Web Application Framework for R},
+    author = {Winston Chang and Joe Cheng and JJ Allaire and Carson Sievert and Barret Schloerke and Yihui Xie and Jeff Allen and Jonathan McPherson and Alan Dipert and Barbara Borges},
+    year = {2024},
+    note = {R package version 1.9.1},
+    url = {https://CRAN.R-project.org/package=shiny},
+  }
+
 @Manual{	  htmlwidgets2021,
   title		= {htmlwidgets: HTML Widgets for R},
   author	= {Ramnath Vaidyanathan and Yihui Xie and JJ Allaire and Joe
@@ -3994,4 +4002,13 @@
  journal = {The New York Times},
  note		= {[Online; accessed 22. Jan. 2025]},
  url     = {https://www.nytimes.com/spotlight/graphics}
+}
+
+@misc{crosstalk2025,
+	title = {{Crosstalk}},
+	year = {2025},
+	author = {{Posit (formerly RStudio Inc.)}},
+	month = jan,
+	note = {[Online; accessed 24. Jan. 2025]},
+	url = {https://rstudio.github.io/crosstalk/index.html}
 }
