--- a/introduction.Rmd
+++ b/introduction.Rmd
@@ -14,8 +14,11 @@ Statisticians have known about this power of visual presentation for a long time
 
 Seeing an object from a distance is one thing, but being able to also touch, manipulate, and probe it is another. Within the human brain, action and perception are not independent, but are instead intricately linked, mutually reinforcing processes [see e.g. @dijkerman2007; @lederman2009]. Beginning in the 1970's, statisticians acquired a new set of tools for exploiting this connection. The advent of computer graphics and interactive data visualization transformed the idea of "interrogating a chart" from a mere turn of phrase into tangible reality. All of a sudden, it became possible to work with the visual representation of data in a tactile way, getting new perspectives and insights at the stroke of a key or click of a button. 
 
-The alluring union of the tactile and the visual lead to interactive data visualization becoming a widely popular method of presenting data. Nowadays, there exists is a dearth of libraries and packages in all the major data analytic programming languages providing tools for building interactive data visualizations. Yet, despite its popularity, interactive data visualization is rarely used by individuals for data exploration. 
+This compelling union of the visual and the tactile has made interactive data visualization a popular method of presenting data. Nowadays, there are many packages and libraries for building interactive data visualizations across all the major data analytic languages. Interactive figures make frequent appearance in online news articles and commercial dashboards. However, despite this apparent popularity, significant gaps remain in the use and understanding of interactive visualizations. Individual analysts rarely utilize interactive data visualization tools [see e.g. @batch2017], the availability of certain more sophisticated interactive features is limited (see Section \@ref(litreview)), and researchers still point to a lack of a general interactive data visualization pipeline [@wickham2009; @vanderplas2020]. 
+
+This thesis explores the challenges surrounding interactive data visualization pipelines. I argue that, contrary to some prevailing views, interactivity is not simply an add-on to static graphics. Instead, interactive visualizations must be designed with interactivity as a primary consideration. Furthermore, I contend that certain interactive features fundamentally influence the types of visualizations that can be effectively presented. My claim is that popular types of interactive visualizations exhibit a particular kind congruence between graphics, statistics, and interaction, and that the absence of this congruence results in suboptimal visualizations. I formalize this congruence using the framework of category theory.
+
 
 #### Thesis Overview
 
-The thesis is organized as follows. First, in Section \@ref(litreview), I reviews the history of interactive data visualization and discusses general trends and issues in the field. Second, in Section \@ref(problems), I discuss specific problems that one faces when designing an interactive data visualization pipeline. Third, in Section \@ref(goals), I outline the specific goals and aims I had while developing the interactive data visualization library. Fourth, Section \@ref(system) details the specific components and design considerations of the system. Sixth, in Section \@ref(applied-example), I show an applied example of exploring a real-world data set, using my interactive data visualization library. Finally, in Section [TODO:DISCUSSION], I discuss lessons learned and potential future directions.
+The thesis is organized as follows. Section \@ref(litreview) reviews the history of interactive data visualization and discusses general trends and issues in the field. In Section \@ref(problems), I discuss specific problems that one faces when designing an interactive data visualization pipeline. In Section \@ref(goals), I outline the specific goals and aims I had while developing the interactive data visualization library. Section \@ref(system) details the specific components and design considerations of the system. Section \@ref(applied-example), I show an applied example of exploring a real-world data set, using my interactive data visualization library. Finally, in Section [TODO:DISCUSSION], I discuss lessons learned and potential future directions.
